@@ -1,5 +1,8 @@
 2015-02-04  Carl Hetherington  <cth@carlh.net>
 
+	* Sort image sequences using the numeric part of the
+	leaf name, rather than alphanumerically (#469).
+
 	* Version 1.77.7 released.
 
 2015-02-04  Carl Hetherington  <cth@carlh.net>
